--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@angular/router": "~11.0.5",
     "@capacitor/core": "2.4.6",
     "@ionic/angular": "^5.5.2",
+    "chart.js": "^2.9.4",
     "ionic2-calendar": "^0.6.6",
     "lodash": "^4.17.20",
     "lowdb": "^1.0.0",
     "moment": "^2.29.1",
+    "ng2-charts": "^2.4.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
