--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@capacitor/core": "2.4.6",
     "@ionic-native/native-storage": "^5.31.1",
     "@ionic/angular": "^5.5.2",
+    "@ionic/storage": "^2.3.1",
     "chart.js": "^2.9.4",
     "ionic2-calendar": "^0.6.6",
     "lodash": "^4.17.20",
