--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
+    "@angular/service-worker": "~11.0.5",
     "@capacitor/core": "2.4.6",
     "@ionic-native/native-storage": "^5.31.1",
     "@ionic/angular": "^5.5.2",
